Updated Yarn lockfile

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "redux": "^4.0.1"
   },
   "scripts": {
-    "tailwind:css": "tailwind build src/css/tailwind.src.css -c  tailwind.js -o src/css/tailwind.css",
-    "start": "npm run tailwind:css && react-scripts start",
-    "build": "npm run tailwind:css && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.generated.css",
+  "prestart": "npm run build:tailwind",
+  "prebuild": "npm run build:tailwind",
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
